Bug 1525631 - Return correct line start and end offsets for inline-block elements with nested line breaks, r=Jamie

If an inline-block element contains nested elements that may contain line breaks, or whitespace that comes from how the HTML file is formatted, both start and end offsets returned from layout may be incorrect. Adjust for the following cases:

* The start offset goes too far back from the passed-in offset, overshooting a line boundary.
* The end offset returned is smaller than the passed-in offset, even though we want the start of the next line. Even on the last line, this should never happen.

Differential Revision: https://phabricator.services.mozilla.com/D94744